Fix: Responsive CSS - two collapsing stages for the control elements
- The filter and page length controls take up a lot less room, so they
  can collapse later

--- a/css/jquery.dataTables.scss
+++ b/css/jquery.dataTables.scss
@@ -445,19 +445,31 @@ table.dataTable td {
 
 
 // Collapse the two column display of the control elements when the screen is
-// small
+// small - the info and paging control get collapsed first as they are wider,
+// and then the length and filter controls
 @media screen and (max-width: 767px) {
 	.dataTables_wrapper {
-		.dataTables_length,
-		.dataTables_filter,
 		.dataTables_info,
 		.dataTables_paginate {
 			float: none;
 			text-align: center;
 		}
 
-		.dataTables_filter,
 		.dataTables_paginate {
+			margin-top: 0.5em;
+		}
+	}
+}
+
+@media screen and (max-width: 640px) {
+	.dataTables_wrapper {
+		.dataTables_length,
+		.dataTables_filter {
+			float: none;
+			text-align: center;
+		}
+
+		.dataTables_filter {
 			margin-top: 0.5em;
 		}
 	}
